# gst-uart

./: README.org  meson.build
src/: bitswap.c  bitswap.h  gstuart.c  gstuartsink.c  gstuartsink.h  gstuartsrc.c  gstuartsrc.h  meson.build  uart.c  uart.h
